# CareFlow

./: README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
careflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: synthetic_careflow_data.csv
scripts/: careflow_utils.py
tests/: test_data_loading.py  test_model_performance.py
